# spatial-temporal-modelling-workshop-quantifying-uncertainity_szj

./: .gitignore  exercise.ipynb  exercise.py  pyproject.toml
